Always show the scrollbar to fix the shifting between pages

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -12,6 +12,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 body {
   line-height: 1;
+  overflow-y:scroll;
 }
 // ol, ul {
 //   list-style: bullet;
